Process Hacker

1.3.5.5
 * NEW:
   * Modules tab shows mapped files
 * FIXED:

1.3.5.0
 * NEW:
   * #2596502 - "Add access keys"
   * #2596509 - "Double click on mutant-->Open properties window"
   * #2596512 - "General tab window goes in the background"
   * #2600995 - "Improvements to Help file"
   * #2602538 - "Move some options to new window"
   * #2602553 - "Add access key for Help"
   * #2602606 - "Display a warning when running on 64bit WIN"
   * #2605000 - "Add descriptions to some buttons"
   * #2605133 - "Add access key to Log"
   * #2605140 - "Save Log-->Suggest Log.txt"
   * #2605146 - "When you open Log, the entries shouldn't be selected"
   * #2605148 - "CSR Processes: Add select all and/or ctrl+A"
   * #2605158 - "Log: Add Copy to clipboard and ctrl+A"
   * #2605167 - "Add "Hide When Closed" option"
   * #2608710 - "Notifications menu improvements"
   * #2608801 - "Add Shutdown options"
   * #2609039 - "Use thousands separator"
   * #2613838 - "Add process' icon before process' name in process' window"
   * #2615707 - "Improvements to Log"
   * #2617637 - "Help file improvements No2"
   * #2617691 - "Add option to replace task manager with Process Hacker"
   * #2628961 - "Add ctrl+A in Services and Network window"
   * #2628967 - "Add ctrl+C in Processes, Services and Network window"
   * #2642505 - "Make some columns' size bigger"
   * KProcessHacker is now enabled by default
   * KProcessHacker now supports multiple clients at one time
   * Process termination now uses KProcessHacker
   * Process Hacker can now use KProcessHacker under a limited user account if it is 
     loaded, giving it full admin-like permissions to processes
   * Process Hacker no longer requires UAC elevation - instead, there are two extra 
     menu items, "Run As Administrator..." and "Show Details for All Processes". It 
     also automatically prompts for elevation for specific tasks.
   * "Run" function
   * "Restart" function
   * "Set Token" function for Windows XP