@@ -3,6 +3,7 @@ Process Hacker
 1.3.5.5
  * NEW:
    * Modules tab shows mapped files
+   * "Reduce Working Set" function
  * FIXED:
 
 1.3.5.0
